examples/namespaced/network/v1alpha1/gatewayconnection.yaml
apiVersion: network.upcloud.m.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: network/v1alpha1/gatewayconnection
  labels:
    testing.upbound.io/example-name: gwconn-example-gateway
  name: gwconn-example-gateway
  namespace: crossplane-system
spec:
  forProvider:
    name: gwconn-example-gateway
    zone: fi-hel2
    plan: advanced
    features:
      - vpn
    labels:
      environment: example
    router:
      idRef:
        name: gwconn-example-router
  providerConfigRef:
    kind: ClusterProviderConfig
    name: default
