examples/namespaced/network/v1alpha1/gatewayconnectiontunnel.yaml
apiVersion: network.upcloud.m.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: network/v1alpha1/gatewayconnectiontunnel
  labels:
    testing.upbound.io/example-name: gwtunnel-example-gateway
  name: gwtunnel-example-gateway
  namespace: crossplane-system
spec:
  forProvider:
    name: gwtunnel-example-gateway
    zone: fi-hel2
    plan: advanced
    features:
      - vpn
    labels:
      environment: example
    router:
      idRef:
        name: gwtunnel-example-router
    address:
      name: gwtunnel-example-address
  providerConfigRef:
    kind: ClusterProviderConfig
    name: default
